@@ -2,8 +2,9 @@ gem2deb (0.2.1) UNRELEASED; urgency=low
 
   * Export RUBY_TEST_VERSION and RUBY_TEST_BIN environment variables
     when running tests.
+  * Run make distclean || make clean instead of just make clean
 
- -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Sun, 03 Apr 2011 11:22:08 +0200
+ -- Lucas Nussbaum <lucas@lucas-nussbaum.net>  Sun, 03 Apr 2011 11:23:54 +0200
 
 gem2deb (0.2.0) unstable; urgency=low
 
